# Licenta

Client/: CMakeLists.txt
Client/model-parameters/: model_metadata.h  model_variables.h
Client/mpu_9250/: mpu9250.c
Client/src/: main.cpp
Client/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
TestMpu/DataAcqusition/: CMakeLists.txt  README.txt
TestMpu/DataAcqusition/ColectData/: CMakeLists.txt  getData.cpp
TestMpu/DataAcqusition/mpu_9250/: mpu9250.c
TestMpu/Server/: main.py
TestMpu/Test_TinyML/: CMakeLists.txt
TestMpu/Test_TinyML/model-parameters/: model_metadata.h  model_variables.h
TestMpu/Test_TinyML/mpu_9250/: CMakeLists.txt  mpu9250.h  mpuObject.cpp  mpuObject.h
TestMpu/Test_TinyML/source/: main.cpp
TestMpu/Test_TinyML/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
